Fixed: Form spacing

--- a/styles/default.scss
+++ b/styles/default.scss
@@ -401,6 +401,7 @@ a {
       background: var(--color-background-dark);
       width: 100%;
       padding: 0.25em 0.25em;
+      margin-bottom: 1em;
       display: flex;
       justify-content: center;
       align-items: center;
